Fixed projects section on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -347,4 +347,63 @@ section {
 
   }
 
+  .story {
+    align-items: center;
+
+    .left-column {
+      display: grid;
+      width: 100%;
+      height: 100%;
+      padding-top: 10%;
+      justify-content: center;
+      align-items: center;
+      grid-template-rows: 50% 50%;
+      grid-template-columns: 50% 50%;
+    }
+
+    .right-column {
+      display: none
+    }
+  }
+
+  .projects-section {
+    height: max-content;
+
+    .projects {
+      height: max-content;
+
+      ul {
+        grid-template-columns: 100%;
+        align-items: center;
+        padding-bottom: 10vh;
+        padding-top: 4vh;
+        row-gap: 10vh;
+
+        .imagesGrid {
+          display: grid;
+          grid-template-columns: 100%;
+          height: 100%;
+          width: 100%;
+          padding-left: 7vw;
+
+          p {
+            margin-left: 0;
+            max-width: 80vw;
+          }
+
+          a {
+            max-width: 80vw;
+          }
+
+          img {
+            width: 80vw;
+            height: 45vw;
+          }
+
+        }
+      }
+    }
+
+  }
+
 }
